# onpprod-site

./: .env.example  DEPLOY.md  Dockerfile  docker-compose.yml  pyproject.toml
app/: Dockerfile  package-lock.json  package.json  views.py
app/public/: index.html
app/src/: App.css  App.js  App.test.js  index.css
app/src/aas/: schema.js  utils.js
app/src/aas/tree/: buildTree.js  pathUtils.js
app/src/editor/: EditorWorkspace.js  SelectedDetails.js  Toast.js  TreeView.js
app/src/editor/forms/: AasCreatePanel.js  ElementCreatePanel.js  SubmodelCreatePanel.js
app/src/pages/: BidsMonitorPage.js  EditorPage.js  HomePage.js
app/templates/: welcome.html
core/: settings.py  urls.py
deploy/: deploy.sh  init-letsencrypt.sh
nginx/conf.d/: onpprod.conf
old_frontend/: app.js  index.html  styles.css
openaas/: aas.xsd
openaas/metamodel/: __init__.py  administrative_information.py  asset_administration_shell.py  asset_information.py  base.py  concept_description.py  data_element.py  environment.py  event_element.py  extension.py  has_data_specification.py  has_extensions.py  has_kind.py  has_semantics.py  identifiable.py  key.py  modelling_kind.py  property.py  qualifiable.py  qualifier.py  referable.py  reference.py  reference_type.py  submodel.py  submodel_element.py
