[project]
name = "onpprod-site"
version = "0.1.0"
description = ""
authors = [
    {name = "onpprod",email = "otavionpproducoes@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "uvicorn[standard] (>=0.30.0,<1.0.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
